# opencv_tests

./: README.md
aruco_board/: CMakeLists.txt  CMakeLists.txt.user.32b71ad  CMakeLists.txt.user.55b89ca  CMakeLists.txt~
aruco_board/src/: detect.cpp
aruco_detect/: CMakeLists.txt  CMakeLists.txt.user.55b89ca  camera_Parameters.yaml  camera_Parameters.yaml~  camera_Parameters_LOGIC.yaml
aruco_detect/src/: create_board.cpp  create_marker.cpp  detect_board.cpp  detect_maker.cpp  detect_maker.cpp~
calib_with_circle_grid/: CMakeLists.txt  CMakeLists.txt.user.55b89ca  calib_with_checkerboard_fisheye.cpp  calib_with_circle_grid.cpp  calib_with_circle_grid_fisheye.cpp  calib_with_circle_grid_general.cpp  camera_camera_calib_UI_1221.yaml  camera_camera_calib_UI_1221.yaml~  choose_blob.cpp  choose_color.cpp  choose_fisheye_mask.cpp  choose_quadrilateral.cpp  circle_grid_detect.cpp  create_asymmetrical_circle_grid.cpp  fisheye_calibration_circle.cpp  test_fov.cpp  video_to_image.cpp
create_charuco/: CMakeLists.txt  create_charuco.cpp  detect_aruco.cpp
create_checkerboard/: CMakeLists.txt  CMakeLists.txt.user.32b71ad  CMakeLists.txt.user.55b89ca  create_checkerboard.cpp  create_checkerboard.cpp~  create_checkerboard_A4.cpp
cuda_orb/: CMakeLists.txt  cuda_orb.cpp
distance_with_height_pitch/: CMakeLists.txt  CMakeLists.txt~  distance_with_height_pitch.cpp
feature_detect_ygz/: CMakeLists.txt  README.md
feature_detect_ygz/include/: read_intrinsic.h
feature_detect_ygz/scripts/: harris.py  harris.py~
feature_detect_ygz/src/: choose_quadrilateral.cpp  fast_imp.cpp  gms_matcher.h  harris_detect.cpp  line_corners.cpp  line_corners_api.cpp  lk_match.cpp  oclGoodFeatureTracker.h  orb_match.cpp  perspective_transformation.cpp  shi_tomasi.cpp  shi_tomasi_api.cpp  shi_tomasi_match.cpp  shi_tomasi_match_stream.cpp  shi_tomasi_match_stream_vins.cpp  sift_match.cpp  susan.cpp  vins_feature_tracker.h
feature_detect_ygz/src/line_descriptor/: binary_descriptor.cpp  precomp.hpp
feature_detect_ygz/src/orb_slam_extractor/: ORBextractor.cc  ORBextractor.h
harris_detect_2.4/: CMakeLists.txt
harris_detect_2.4/src/: orb_match.cpp  read_intrinsic.h
histogram_equalization/: CMakeLists.txt  histogram_equalization.cpp
homography/: CMakeLists.txt  CMakeLists.txt.user.32b71ad  CMakeLists.txt~  homography.cpp  homography.cpp~
hough_circles/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  hough_circles  hough_circles.cpp
hough_lines/: hough_lines.cpp  hough_lines.cpp~
line_descriptor/: CMakeLists.txt  CMakeLists.txt~
line_descriptor/src/: binary_descriptor.cpp
line_feature_detect/: CMakeLists.txt  CMakeLists.txt.user.55b89ca  camera_camera_calib_ak.yaml  camera_fisheye_ankobot.yaml  camera_fisheye_ankobot.yaml~
line_feature_detect/ankobot/data/: map_points.csv
line_feature_detect/ankobot/data/2018-12-25-17-02-30/: camera.yaml
line_feature_detect/ankobot/data/version/: NavigationPlanning.version  webui.version
line_feature_detect/src/: TestPointFeature.cpp  line_feature.cpp  line_feature_new.cpp  line_feature_new_once.cpp  line_feature_optimize.cpp
line_feature_match/: CMakeLists.txt  camera_camera_calib_UI_1221.yaml  hough_lines.cpp~  line_feature.cpp
mat/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mymat  mymat.cpp  mymat.h
mono_extrinc_calib/: @todo.md  @todo.md~  CMakeLists.txt  CMakeLists.txt.user.32b71ad  CMakeLists.txt.user.55b89ca  KS-800X600-D-130-matlab.yaml  KS-800X600-D-130-matlab.yaml~  KS-800X600-D-130.yaml~  UI-1221E.yaml  UI-1221E.yaml~  camera_Parameters.yaml  distance_with_height_pitch.txt~  mono_extrinc_calib.cpp
otsu_segement/: CMakeLists.txt  CMakeLists.txt~  otsu_seg.cpp
rgbd_pcl/: CMakeLists.txt  camera_Parameters.yaml
test/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  test  test.cpp  test.cpp~
useGeometry/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eigenGeometry  eigenGeometry.cpp  geometry.cbp
useGeometry/.kdev4/: useGeometry.kdev4
vfc_opencv2_2016_10_12/: featureMatch.cpp  featureMatch.h  main.cpp  vfc.cpp  vfc.h
